--- a/content/art.rmd
+++ b/content/art.rmd
@@ -5,7 +5,9 @@ menu: main
 title: Art
 ---
 
-Through Silence, posted on April 8, 2021, Themes from Art has discussed seven themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each theme, a total of 28 artistic works.  The table below lists each of them.
+Through Silence, posted on April 8, 2021, Themes from Art has discussed seven themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each theme, a total of 28 artistic works.  The table below lists each of them by genre.
+
+The second table groups the artistic works by theme.
 
 ```{r packages, echo=FALSE, warning=FALSE, message=FALSE}
 
@@ -20,7 +22,13 @@ art <- readxl::read_xlsx(path = "C:/Users/Rees Morrison/Documents/R/Projects/CLI
 
 artTable <- kableExtra::kable(art)
 
-artTable
+artTable  # by genre and then chrono
+
+artTablebyTheme <- art %>% arrange(Theme)
+
+artTable.tab <- kableExtra::kable(artTablebyTheme)
+
+artTable.tab # by theme
 
 ```
 
