--- a/content/subthemes.Rmd
+++ b/content/subthemes.Rmd
@@ -5,17 +5,20 @@ menu: main
 title: Subthemes
 ---
 
-In the seven themes written about so far, through Silence posted on April 8, 2021, we have considered     subthemes.
-
 ```{r packages, echo=FALSE, warning=FALSE, message=FALSE}
 library(tidyverse)
 
 ```
 
-
 ```{r artSubthemes, echo=FALSE}
 
 subthemes <- readxl::read_xlsx(path = "C:/Users/Rees Morrison/Documents/R/Projects/CLIENTS/Themes/BlogThemes/subthemesCombo.xlsx")
+
+```
+
+In the seven themes addressed so far, through Silence posted on April 8, 2021, Themes from Art has written about `r nrow(subthemes)` subthemes.
+
+```{r subthemeTable, echo=FALSE}
 
 subthemesTable <- kableExtra::kable(subthemes)
 
