--- a/content/art.rmd
+++ b/content/art.rmd
@@ -2,7 +2,7 @@
 date: "2021-04-10"
 description: the art used and themes
 menu: main
-title: "Art"
+title: 
 ---
 
 Through Silence, posted on April 8, 2021, Themes from Art has discussed seven themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each theme, a total of 28 artistic works.  The table below lists each of them by genre.
