--- a/content/art.rmd
+++ b/content/art.rmd
@@ -69,6 +69,21 @@ artTable <- kableExtra::kable(art)
 
 artTable  # by Theme, then Genre, with URL
 
+
+# by Genre, the Theme with URL on Art
+artTableGenre <- art %>% select(Theme, Genre, Art) %>% arrange(Genre, Theme)
+artTableGenre <- artTableGenre %>% select(Theme, Art) 
+artGenreTable <- kableExtra::kable(artTableGenre)
+
+Alcohol, [Who’s Afraid of Virginia Woolf](https://themesfromart.com/post/2021-02-03-alcohol-woolf-nichols/alcoholwoolfnichols/)
+Beauty, [Taxi Driver](https://themesfromart.com/post/2021-04-21-beauty-taxi-driver-a-movie-with-robert-de-niro-and-cybill-shepherd/beautytaxi/)
+Chance, [The Deerhunter](https://themesfromart.com/post/2021-03-14-chancewinner/chancewinner/)
+Death, [Bonnie & Clyde](https://themesfromart.com/post/2021-05-03-death-from-bonnie-clyde-a-movie-starring-warren-beatty-and-faye-dunaway/deathbonnie/)
+Decisions, [Sophie’s Choice](https://themesfromart.com/post/2021-02-08-decisions-sophie-s-choice-with-meryl-streep/decisionssophies/)
+Destruction, [Saving Private Ryan](https://themesfromart.com/post/2021-02-18-destruction-saving-private-ryan-a-movie-by-steven-spielberg/destructionsaving/)
+Silence, [North by Northwest](https://themesfromart.com/post/silencenorthwest/)
+Time, [Groundhog Day](https://themesfromart.com/post/2021-03-08-time-from-groundhog-day-starring-bill-murray/timegroundhog/)
+Work, [Citizen Kane](https://themesfromart.com/post/2021-02-26-workkane/workkane/)
 ```
 
 <!-- urls <- data.frame(Theme = c("(https://themesfromart.com/post/2021-02-03-alcohol-woolf-nichols/) -->
