--- a/content/art.rmd
+++ b/content/art.rmd
@@ -29,10 +29,10 @@ urls <- data.frame(Theme = c("(https://themesfromart.com/post/2021-02-03-alcohol
 "(https://themesfromart.com/post/2021-04-21-beauty-garden-at-sainte-adresse-from-a-painting-by-claude-monet/beautystadress/)",
 "(https://themesfromart.com/post/2021-04-21-beauty-she-walks-in-beauty-a-poem-by-lord-byron/beautybyron/)", 
 "(https://themesfromart.com/post/2021-04-21-beautyflack/beautyflack/)",
-"(https://themesfromart.com/post/2021-03-14-chancewinner/chancewinner/)",
-"(https://themesfromart.com/post/2021-03-14-chancehap/chancehap/)",
 "(https://themesfromart.com/post/2021-03-14-chancedeerhunter/chancedeer/)",
-"(https://themesfromart.com/post/2021-03-14-chancechurch/chancechurch/)", 
+"(https://themesfromart.com/post/2021-03-14-chancechurch/chancechurch/)",
+"(https://themesfromart.com/post/2021-03-14-chancehap/chancehap/)",
+"(https://themesfromart.com/post/2021-03-14-chancewinner/chancewinner/)", 
 "(https://themesfromart.com/post/2021-05-03-death-from-bonnie-clyde-a-movie-starring-warren-beatty-and-faye-dunaway/deathbonnie/)",
 "(https://themesfromart.com/post/2021-05-03-death-from-house-of-the-hanged-man-a-painting-by-paul-cezanne/deathhanged/)",
 "(https://themesfromart.com/post/2021-05-03-death-from-death-be-not-proud-a-poem-by-john-donne/deathdonne/)",
@@ -75,15 +75,39 @@ artTableGenre <- art %>% select(Theme, Genre, Art) %>% arrange(Genre, Theme)
 artTableGenre <- artTableGenre %>% select(Theme, Art) 
 artGenreTable <- kableExtra::kable(artTableGenre)
 
-Alcohol, [Who’s Afraid of Virginia Woolf](https://themesfromart.com/post/2021-02-03-alcohol-woolf-nichols/alcoholwoolfnichols/)
-Beauty, [Taxi Driver](https://themesfromart.com/post/2021-04-21-beauty-taxi-driver-a-movie-with-robert-de-niro-and-cybill-shepherd/beautytaxi/)
-Chance, [The Deerhunter](https://themesfromart.com/post/2021-03-14-chancewinner/chancewinner/)
-Death, [Bonnie & Clyde](https://themesfromart.com/post/2021-05-03-death-from-bonnie-clyde-a-movie-starring-warren-beatty-and-faye-dunaway/deathbonnie/)
-Decisions, [Sophie’s Choice](https://themesfromart.com/post/2021-02-08-decisions-sophie-s-choice-with-meryl-streep/decisionssophies/)
-Destruction, [Saving Private Ryan](https://themesfromart.com/post/2021-02-18-destruction-saving-private-ryan-a-movie-by-steven-spielberg/destructionsaving/)
-Silence, [North by Northwest](https://themesfromart.com/post/silencenorthwest/)
-Time, [Groundhog Day](https://themesfromart.com/post/2021-03-08-time-from-groundhog-day-starring-bill-murray/timegroundhog/)
-Work, [Citizen Kane](https://themesfromart.com/post/2021-02-26-workkane/workkane/)
+Alcohol: [Who’s Afraid of Virginia Woolf](https://themesfromart.com/post/2021-02-03-alcohol-woolf-nichols/alcoholwoolfnichols/)
+Beauty: [Taxi Driver](https://themesfromart.com/post/2021-04-21-beauty-taxi-driver-a-movie-with-robert-de-niro-and-cybill-shepherd/beautytaxi/)
+Chance: [The Deerhunter](https://themesfromart.com/post/2021-03-14-chancewinner/chancewinner/)
+Death: [Bonnie & Clyde](https://themesfromart.com/post/2021-05-03-death-from-bonnie-clyde-a-movie-starring-warren-beatty-and-faye-dunaway/deathbonnie/)
+Decisions: [Sophie’s Choice](https://themesfromart.com/post/2021-02-08-decisions-sophie-s-choice-with-meryl-streep/decisionssophies/)
+Destruction: [Saving Private Ryan](https://themesfromart.com/post/2021-02-18-destruction-saving-private-ryan-a-movie-by-steven-spielberg/destructionsaving/)
+Silence: [North by Northwest](https://themesfromart.com/post/silencenorthwest/)
+Time: [Groundhog Day](https://themesfromart.com/post/2021-03-08-time-from-groundhog-day-starring-bill-murray/timegroundhog/)
+Work: [Citizen Kane](https://themesfromart.com/post/2021-02-26-workkane/workkane/)
+
+# Paintings
+* Alcohol:	[The Absinthe](https://themesfromart.com/post/2021-02-03-alcohol-absinthe-degas/alcoholabsinthedegas/)
+* Beauty:	[Garden at Sainte Adresse](https://themesfromart.com/post/2021-04-21-beauty-garden-at-sainte-adresse-from-a-painting-by-claude-monet/beautystadress/)
+* Chance:	[The Quai Saint-Michel and Notre-Dame](http://localhost:4321/post/2021-03-14-chancechurch/chancechurch/)
+* Death:	[The House of the Hanged Man](https://themesfromart.com/post/2021-05-03-death-from-house-of-the-hanged-man-a-painting-by-paul-cezanne/deathhanged/)
+* Decisions:	[The Card Players](https://themesfromart.com/post/2021-02-08-decisions-the-card-players-a-painting-by-paul-cezanne/decisionscardplayerscezanne/)
+* Destruction:	[The Flood at Port-Marley](https://themesfromart.com/post/2021-02-18-destruction-from-flood-at-port-marly-a-painting-by-alfred-sisley/destructionflood/)
+* Silence:	[Jane Avril Leaving the Moulin Rouge](https://themesfromart.com/post/silenceavril/)
+* Time:	[The Bellili Family](https://themesfromart.com/post/2021-03-08-time-from-the-bellili-family-by-edgar-degas/timebellili/)
+* Work:	[The Floor Scrapers](https://themesfromart.com/post/2021-02-26-workscrapers/workscrapers/)
+                               
+# Poems
+
+Alcohol: [Mr. Flood’s Party](https://themesfromart.com/post/2021-01-24-alcohol-flood-frost/alcohol/)
+Beauty: [She Walks in Beauty](https://themesfromart.com/post/2021-04-21-beauty-she-walks-in-beauty-a-poem-by-lord-byron/beautybyron/)
+Chance: [Hap](https://themesfromart.com/post/2021-03-14-chancehap/chancehap/)
+Death: [Death, be not proud](https://themesfromart.com/post/2021-05-03-death-from-death-be-not-proud-a-poem-by-john-donne/deathdonne/)
+Decisions: [The Road Not Taken](https://themesfromart.com/post/2021-02-08-decisions-from-the-road-not-taken-a-poem-by-robert-frost/decisionsroadfrost/)
+Destruction: [Ozymandias](https://themesfromart.com/post/2021-02-18-destruction-ozymandias-a-poem-by-percy-bysshe-shelley/destructoz/)
+Silence: [For Whom the Bell Tolls](https://themesfromart.com/post/2021-04-08-silencedonne/silencedonne/)
+Time: [To His Coy Mistress](https://themesfromart.com/post/2021-03-08-time-to-his-coy-mistress-by-andrew-marvell/timecoy/)
+Work: [Stopping by Woods on a Snowy Evening](https://themesfromart.com/post/2021-02-26-worksnowy/worksnowy/)
+
 ```
 
 <!-- urls <- data.frame(Theme = c("(https://themesfromart.com/post/2021-02-03-alcohol-woolf-nichols/) -->
