--- a/content/art.rmd
+++ b/content/art.rmd
@@ -108,6 +108,17 @@ Silence: [For Whom the Bell Tolls](https://themesfromart.com/post/2021-04-08-sil
 Time: [To His Coy Mistress](https://themesfromart.com/post/2021-03-08-time-to-his-coy-mistress-by-andrew-marvell/timecoy/)
 Work: [Stopping by Woods on a Snowy Evening](https://themesfromart.com/post/2021-02-26-worksnowy/worksnowy/)
 
+# Rock Songs
+Alcohol:	[Margaritaville](https://themesfromart.com/post/2021-02-01-alcohol-margaritaville-buffet/alcoholmargarita/)
+Beauty:	[The First Time Ever I Saw Your Face](https://themesfromart.com/post/2021-04-21-beautyflack/beautyflack/)
+Chance:	[The Winner Takes It All](https://themesfromart.com/post/2021-03-14-chancechurch/chancechurch/)
+Death:	[Honey](https://themesfromart.com/post/2021-05-03-death-from-honey-sung-by-bobby-goldsboro/deathhoney/)
+Decisions:	[Do You Believe in Magic?](https://themesfromart.com/post/2021-02-08-decisions-from-do-you-believe-in-magic-a-song-by-the-lovin-spoonful/decisionsmagicspoonful/)
+Destruction:	[My Hometown](https://themesfromart.com/post/2021-02-18-destruction-from-my-hometown-a-rock-ballad-by-bruce-springsteen/destructhometown/)
+Silence:	[The Sounds of Silence](https://themesfromart.com/post/2021-04-08-silencesounds/silencesounds/)
+Time:	[Turn, Turn, Turn](https://themesfromart.com/post/2021-03-08-time-from-turn-turn-turn-by-the-byrds/timeturnturn/)
+Work:	[Proud Mary](https://themesfromart.com/post/2021-02-26-workproud/workproud/)
+
 ```
 
 <!-- urls <- data.frame(Theme = c("(https://themesfromart.com/post/2021-02-03-alcohol-woolf-nichols/) -->
