--- a/content/art.rmd
+++ b/content/art.rmd
@@ -87,15 +87,15 @@ artGenreTable <- kableExtra::kable(artTableGenre)
 # Work: [Citizen Kane](https://themesfromart.com/post/2021-02-26-workkane/workkane/)
 
 # Paintings
-* Alcohol:	[The Absinthe](https://themesfromart.com/post/2021-02-03-alcohol-absinthe-degas/alcoholabsinthedegas/)
-* Beauty:	[Garden at Sainte Adresse](https://themesfromart.com/post/2021-04-21-beauty-garden-at-sainte-adresse-from-a-painting-by-claude-monet/beautystadress/)
-* Chance:	[The Quai Saint-Michel and Notre-Dame](http://localhost:4321/post/2021-03-14-chancechurch/chancechurch/)
-* Death:	[The House of the Hanged Man](https://themesfromart.com/post/2021-05-03-death-from-house-of-the-hanged-man-a-painting-by-paul-cezanne/deathhanged/)
-* Decisions:	[The Card Players](https://themesfromart.com/post/2021-02-08-decisions-the-card-players-a-painting-by-paul-cezanne/decisionscardplayerscezanne/)
-* Destruction:	[The Flood at Port-Marley](https://themesfromart.com/post/2021-02-18-destruction-from-flood-at-port-marly-a-painting-by-alfred-sisley/destructionflood/)
-* Silence:	[Jane Avril Leaving the Moulin Rouge](https://themesfromart.com/post/silenceavril/)
-* Time:	[The Bellili Family](https://themesfromart.com/post/2021-03-08-time-from-the-bellili-family-by-edgar-degas/timebellili/)
-* Work:	[The Floor Scrapers](https://themesfromart.com/post/2021-02-26-workscrapers/workscrapers/)
+Alcohol: [The Absinthe](https://themesfromart.com/post/2021-02-03-alcohol-absinthe-degas/alcoholabsinthedegas/)
+Beauty:	[Garden at Sainte Adresse](https://themesfromart.com/post/2021-04-21-beauty-garden-at-sainte-adresse-from-a-painting-by-claude-monet/beautystadress/)
+Chance:	[The Quai Saint-Michel and Notre-Dame](http://localhost:4321/post/2021-03-14-chancechurch/chancechurch/)
+Death:	[The House of the Hanged Man](https://themesfromart.com/post/2021-05-03-death-from-house-of-the-hanged-man-a-painting-by-paul-cezanne/deathhanged/)
+Decisions:	[The Card Players](https://themesfromart.com/post/2021-02-08-decisions-the-card-players-a-painting-by-paul-cezanne/decisionscardplayerscezanne/)
+Destruction:	[The Flood at Port-Marley](https://themesfromart.com/post/2021-02-18-destruction-from-flood-at-port-marly-a-painting-by-alfred-sisley/destructionflood/)
+Silence:	[Jane Avril Leaving the Moulin Rouge](https://themesfromart.com/post/silenceavril/)
+Time:	[The Bellili Family](https://themesfromart.com/post/2021-03-08-time-from-the-bellili-family-by-edgar-degas/timebellili/)
+Work:	[The Floor Scrapers](https://themesfromart.com/post/2021-02-26-workscrapers/workscrapers/)
                                
 # Poems
 
