--- a/content/art.rmd
+++ b/content/art.rmd
@@ -5,7 +5,7 @@ menu: main
 title: []
 ---
 
-Through Birds, posted in mid-June, Themes from Art has discussed 12 themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each theme, a total of 48 artistic works.  The table below lists each of them by theme and within theme by genre.
+Through Dogs, posted in early January of 2022, Themes from Art has discussed 29 Themes, eliciting subthemes from one poem, movie, rock song, and impressionist painting for each Theme, a total of 116 artistic works.  The table below lists each of the art works by Theme and within theme by genre.
 
 ```{r packages, echo=FALSE, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -64,7 +64,7 @@ art <- art[  , c("Theme", "Genre", "Art", "Artist")]
 art <- art %>% arrange(Theme, Genre)
 
 # create URL for the Art 
-art$Art <- str_c("[", art$Art, "]", urls$Theme)
+# art$Art <- str_c("[", art$Art, "]", urls$Theme)
 
 artTable <- kableExtra::kable(art) 
 
@@ -88,38 +88,38 @@ artGenreTable <- kableExtra::kable(artTableGenre)
 # Work: [Citizen Kane](https://themesfromart.com/post/2021-02-26-workkane/workkane/)
 
 # Paintings
-Alcohol: [The Absinthe](https://themesfromart.com/post/2021-02-03-alcohol-absinthe-degas/alcoholabsinthedegas/)
-Beauty:	[Garden at Sainte Adresse](https://themesfromart.com/post/2021-04-21-beauty-garden-at-sainte-adresse-from-a-painting-by-claude-monet/beautystadress/)
-Chance:	[The Quai Saint-Michel and Notre-Dame](http://localhost:4321/post/2021-03-14-chancechurch/chancechurch/)
-Death:	[The House of the Hanged Man](https://themesfromart.com/post/2021-05-03-death-from-house-of-the-hanged-man-a-painting-by-paul-cezanne/deathhanged/)
-Decisions:	[The Card Players](https://themesfromart.com/post/2021-02-08-decisions-the-card-players-a-painting-by-paul-cezanne/decisionscardplayerscezanne/)
-Destruction:	[The Flood at Port-Marley](https://themesfromart.com/post/2021-02-18-destruction-from-flood-at-port-marly-a-painting-by-alfred-sisley/destructionflood/)
-Silence:	[Jane Avril Leaving the Moulin Rouge](https://themesfromart.com/post/silenceavril/)
-Time:	[The Bellili Family](https://themesfromart.com/post/2021-03-08-time-from-the-bellili-family-by-edgar-degas/timebellili/)
-Work:	[The Floor Scrapers](https://themesfromart.com/post/2021-02-26-workscrapers/workscrapers/)
-                               
-# Poems
-
-Alcohol: [Mr. Flood’s Party](https://themesfromart.com/post/2021-01-24-alcohol-flood-frost/alcohol/)
-Beauty: [She Walks in Beauty](https://themesfromart.com/post/2021-04-21-beauty-she-walks-in-beauty-a-poem-by-lord-byron/beautybyron/)
-Chance: [Hap](https://themesfromart.com/post/2021-03-14-chancehap/chancehap/)
-Death: [Death, be not proud](https://themesfromart.com/post/2021-05-03-death-from-death-be-not-proud-a-poem-by-john-donne/deathdonne/)
-Decisions: [The Road Not Taken](https://themesfromart.com/post/2021-02-08-decisions-from-the-road-not-taken-a-poem-by-robert-frost/decisionsroadfrost/)
-Destruction: [Ozymandias](https://themesfromart.com/post/2021-02-18-destruction-ozymandias-a-poem-by-percy-bysshe-shelley/destructoz/)
-Silence: [For Whom the Bell Tolls](https://themesfromart.com/post/2021-04-08-silencedonne/silencedonne/)
-Time: [To His Coy Mistress](https://themesfromart.com/post/2021-03-08-time-to-his-coy-mistress-by-andrew-marvell/timecoy/)
-Work: [Stopping by Woods on a Snowy Evening](https://themesfromart.com/post/2021-02-26-worksnowy/worksnowy/)
-
-# Rock Songs
-Alcohol:	[Margaritaville](https://themesfromart.com/post/2021-02-01-alcohol-margaritaville-buffet/alcoholmargarita/)
-Beauty:	[The First Time Ever I Saw Your Face](https://themesfromart.com/post/2021-04-21-beautyflack/beautyflack/)
-Chance:	[The Winner Takes It All](https://themesfromart.com/post/2021-03-14-chancechurch/chancechurch/)
-Death:	[Honey](https://themesfromart.com/post/2021-05-03-death-from-honey-sung-by-bobby-goldsboro/deathhoney/)
-Decisions:	[Do You Believe in Magic?](https://themesfromart.com/post/2021-02-08-decisions-from-do-you-believe-in-magic-a-song-by-the-lovin-spoonful/decisionsmagicspoonful/)
-Destruction:	[My Hometown](https://themesfromart.com/post/2021-02-18-destruction-from-my-hometown-a-rock-ballad-by-bruce-springsteen/destructhometown/)
-Silence:	[The Sounds of Silence](https://themesfromart.com/post/2021-04-08-silencesounds/silencesounds/)
-Time:	[Turn, Turn, Turn](https://themesfromart.com/post/2021-03-08-time-from-turn-turn-turn-by-the-byrds/timeturnturn/)
-Work:	[Proud Mary](https://themesfromart.com/post/2021-02-26-workproud/workproud/)
+# Alcohol: [The Absinthe](https://themesfromart.com/post/2021-02-03-alcohol-absinthe-degas/alcoholabsinthedegas/)
+# Beauty:	[Garden at Sainte Adresse](https://themesfromart.com/post/2021-04-21-beauty-garden-at-sainte-adresse-from-a-painting-by-claude-monet/beautystadress/)
+# Chance:	[The Quai Saint-Michel and Notre-Dame](http://localhost:4321/post/2021-03-14-chancechurch/chancechurch/)
+# Death:	[The House of the Hanged Man](https://themesfromart.com/post/2021-05-03-death-from-house-of-the-hanged-man-a-painting-by-paul-cezanne/deathhanged/)
+# Decisions:	[The Card Players](https://themesfromart.com/post/2021-02-08-decisions-the-card-players-a-painting-by-paul-cezanne/decisionscardplayerscezanne/)
+# Destruction:	[The Flood at Port-Marley](https://themesfromart.com/post/2021-02-18-destruction-from-flood-at-port-marly-a-painting-by-alfred-sisley/destructionflood/)
+# Silence:	[Jane Avril Leaving the Moulin Rouge](https://themesfromart.com/post/silenceavril/)
+# Time:	[The Bellili Family](https://themesfromart.com/post/2021-03-08-time-from-the-bellili-family-by-edgar-degas/timebellili/)
+# Work:	[The Floor Scrapers](https://themesfromart.com/post/2021-02-26-workscrapers/workscrapers/)
+#                                
+# # Poems
+# 
+# Alcohol: [Mr. Flood’s Party](https://themesfromart.com/post/2021-01-24-alcohol-flood-frost/alcohol/)
+# Beauty: [She Walks in Beauty](https://themesfromart.com/post/2021-04-21-beauty-she-walks-in-beauty-a-poem-by-lord-byron/beautybyron/)
+# Chance: [Hap](https://themesfromart.com/post/2021-03-14-chancehap/chancehap/)
+# Death: [Death, be not proud](https://themesfromart.com/post/2021-05-03-death-from-death-be-not-proud-a-poem-by-john-donne/deathdonne/)
+# Decisions: [The Road Not Taken](https://themesfromart.com/post/2021-02-08-decisions-from-the-road-not-taken-a-poem-by-robert-frost/decisionsroadfrost/)
+# Destruction: [Ozymandias](https://themesfromart.com/post/2021-02-18-destruction-ozymandias-a-poem-by-percy-bysshe-shelley/destructoz/)
+# Silence: [For Whom the Bell Tolls](https://themesfromart.com/post/2021-04-08-silencedonne/silencedonne/)
+# Time: [To His Coy Mistress](https://themesfromart.com/post/2021-03-08-time-to-his-coy-mistress-by-andrew-marvell/timecoy/)
+# Work: [Stopping by Woods on a Snowy Evening](https://themesfromart.com/post/2021-02-26-worksnowy/worksnowy/)
+# 
+# # Rock Songs
+# Alcohol:	[Margaritaville](https://themesfromart.com/post/2021-02-01-alcohol-margaritaville-buffet/alcoholmargarita/)
+# Beauty:	[The First Time Ever I Saw Your Face](https://themesfromart.com/post/2021-04-21-beautyflack/beautyflack/)
+# Chance:	[The Winner Takes It All](https://themesfromart.com/post/2021-03-14-chancechurch/chancechurch/)
+# Death:	[Honey](https://themesfromart.com/post/2021-05-03-death-from-honey-sung-by-bobby-goldsboro/deathhoney/)
+# Decisions:	[Do You Believe in Magic?](https://themesfromart.com/post/2021-02-08-decisions-from-do-you-believe-in-magic-a-song-by-the-lovin-spoonful/decisionsmagicspoonful/)
+# Destruction:	[My Hometown](https://themesfromart.com/post/2021-02-18-destruction-from-my-hometown-a-rock-ballad-by-bruce-springsteen/destructhometown/)
+# Silence:	[The Sounds of Silence](https://themesfromart.com/post/2021-04-08-silencesounds/silencesounds/)
+# Time:	[Turn, Turn, Turn](https://themesfromart.com/post/2021-03-08-time-from-turn-turn-turn-by-the-byrds/timeturnturn/)
+# Work:	[Proud Mary](https://themesfromart.com/post/2021-02-26-workproud/workproud/)
 
 ```
 
