--- a/content/post/2022-01-26-part-1-concepts-quantitatively-compared-and-explored/Part I Themes.Rmd
+++ b/content/post/2022-01-26-part-1-concepts-quantitatively-compared-and-explored/Part I Themes.Rmd
@@ -5,7 +5,7 @@ date: '2022-01-26'
 slug: []
 categories:
   - Analysis
-tags: ["Introduction to Themes, for Analysis",]
+tags: ["Introduction to Themes, for Analysis"]
 draft: yes
 ---
 
