--- a/content/post/2022-02-01-sun-from-oive-trees-a-painting-by-van-gogh/SunOlive.Rmd
+++ b/content/post/2022-02-01-sun-from-oive-trees-a-painting-by-van-gogh/SunOlive.Rmd
@@ -18,15 +18,15 @@ In “The Olive Trees,” Vincent Van Gogh didn’t focus on the Sun, although h
 knitr::include_graphics(path = "C:/Users/Rees Morrison/Documents/R/Projects/CLIENTS/Themes/BlogThemes1/static/media/SunOlive.jpg")
 ```
 
-40width 50 height
-```{r, olive2, out.width="40%", out.height="50%"}
+40width 50 height, tried pt instead of %
+```{r, olive2, out.width="400pt", out.height="500pt"}
 knitr::include_graphics(path = "C:/Users/Rees Morrison/Documents/R/Projects/CLIENTS/Themes/BlogThemes1/static/media/SunOlive.jpg")
 ```
 
 removed spaces around "="
 
-out.xtra, right
-```{r, olive3, out.width="40%", out.height="50%", out.align = “right”, out.extra = 'style="background-color: #9ecff7; padding:10px; display: inline-block"'}
+out.xtra, right, be sure ; at end  what about eval="TRUE"  used pt
+```{r, olive3, out.width="400pt", out.height="500pt", out.align = “right”, out.extra = 'style="background-color: #9ecff7; padding:10px; display: inline-block;"'}
 knitr::include_graphics(path = "C:/Users/Rees Morrison/Documents/R/Projects/CLIENTS/Themes/BlogThemes1/static/media/SunOlive.jpg")
 ```
 
